# CassieControllers

./: .gitignore  CMakeLists.txt  README.md
controllers/: CMakeLists.txt  README.md
controllers/include/controllers/: acc_limits.h  constraint.h  controller.h  data.h  ee_task.h  joint_limits_task.h  model.h  options.h  os_ctrl.h  output_prescale.h  pid.h  task.h  types.h
controllers/include/controllers/optimisation/: qpoases_data.h  subvector.h
controllers/include/controllers/osc/: model.h  options.h  osc.h
controllers/include/controllers/osc/tasks/: ee_task.h  end_effector_task.h  joint_limits_task.h  joint_track_task.h  task.h
controllers/include/controllers/tasks/: acc_limits.h  casadi_interface.h  code_generation_functions.h  constraint.h  ee_task.h  joint_limits_task.h  joint_track_task.h  task.h
controllers/src/: acc_limits.cc  constraint.cc  controller.cc  ee_task.cc  joint_limits_task.cc  joint_track_task.cc  model.cc  os_ctrl.cc  output_prescale.cc  task.cc
controllers/src/osc/: create_osc.cc  model.cc  osc.cc  run_osc.cc
controllers/src/osc/tasks/: ee_task.cc  end_effector_task.cc  joint_limits_task.cc  joint_track_task.cc  task.cc
examples/arm/: CMakeLists.txt  README.md
examples/arm/controller/: os_ctrl.cc  os_ctrl.h  osc.cc  osc.h
examples/arm/model/: actuation.h  codegen.cc
examples/arm/model/cg/: arm_actuation_matrix.c  arm_actuation_matrix.h  arm_bias_vector.c  arm_bias_vector.h  arm_constraint.c  arm_constraint.h  arm_hand.c  arm_hand.h  arm_mass_matrix.c  arm_mass_matrix.h  arm_tip.c  arm_tip.h
examples/arm/model/cg/leg/: cassie_actuation.h  cassie_ankle.h  cassie_bias_vector.c  cassie_bias_vector.h  cassie_foot_back.c  cassie_foot_back.h  cassie_foot_front.c  cassie_foot_front.h  cassie_heel_spring_constraint.c  cassie_heel_spring_constraint.h  cassie_mass_matrix.c  cassie_mass_matrix.h  cassie_spring_forces.c
examples/arm/model/urdf/: arm.urdf
examples/arm/sim/: arm.xml  scene.xml  simulate.cc  simulate.h
examples/cassie/: CMakeLists.txt  README.md
examples/cassie-v2/: CMakeLists.txt  README.md
examples/cassie-v2/controller/: osc_leg.h
examples/cassie-v2/model/: codegen_leg.cc
examples/cassie-v2/model/cg/leg/: cassie_achilles_rod_constraint.c  cassie_achilles_rod_constraint.h  cassie_actuation.c  cassie_actuation.h  cassie_actuation_map.c  cassie_actuation_map.h  cassie_ankle.c  cassie_ankle.h  cassie_bias_vector.c  cassie_bias_vector.h  cassie_foot_back.c  cassie_foot_back.h  cassie_foot_front.c  cassie_foot_front.h  cassie_heel_spring_constraint.c  cassie_heel_spring_constraint.h  cassie_mass_matrix.c  cassie_mass_matrix.h  cassie_spring_forces.c  cassie_spring_forces.h
examples/cassie-v2/model/urdf/: cassie.urdf  cassie_fixed.urdf  cassie_leg.urdf
examples/cassie-v2/sim/: simulate.cc  simulate.h
examples/cassie-v2/sim/agility_cassie/: scene.xml
examples/cassie-v2/sim/agility_cassie/cassie.urdf/: cassie_cassie-pelvis.urdf
examples/cassie/controller/: os_ctrl.cc  os_ctrl.h  os_ctrl_leg.cc  os_ctrl_leg.h  osc.cc  osc.h  osc_fixed.cc  osc_fixed.h  osc_leg.cc  osc_leg.h  osc_leg_v2.cc  osc_leg_v2.h
examples/cassie/model/: actuation.cc  actuation.h  closed_loop_constraint.cc  closed_loop_constraint.h  codegen.cc  codegen_fixed.cc  codegen_leg.cc  spring_deflection.cc  spring_deflection.h  springs.cc  springs.h
examples/cassie/model/cg/cassie/: cassie_LeftFootBack.c  cassie_LeftFootBack.h  cassie_LeftFootFront.c  cassie_LeftFootFront.h  cassie_RightFootBack.c  cassie_RightFootBack.h  cassie_RightFootFront.c  cassie_RightFootFront.h  cassie_achilles_rod_constraints.c  cassie_achilles_rod_constraints.h  cassie_actuation_map.c  cassie_actuation_map.h  cassie_bias_vector.c  cassie_bias_vector.h  cassie_centre_of_mass_data.c  cassie_centre_of_mass_data.h  cassie_left_ankle.c  cassie_left_ankle.h  cassie_left_foot_back.c  cassie_left_foot_back.h  cassie_left_foot_front.c  cassie_left_foot_front.h  cassie_mass_matrix.c  cassie_mass_matrix.h  cassie_right_ankle.c  cassie_right_ankle.h  cassie_right_foot_back.c  cassie_right_foot_back.h  cassie_right_foot_front.c  cassie_right_foot_front.h
examples/cassie/model/cg/cassie-fixed/: cassie_fixed_LeftFootPitch.c  cassie_fixed_LeftFootPitch.h  cassie_fixed_RightFootPitch.c  cassie_fixed_RightFootPitch.h  cassie_fixed_achilles_rod_constraints.c  cassie_fixed_achilles_rod_constraints.h  cassie_fixed_actuation_map.c  cassie_fixed_actuation_map.h  cassie_fixed_bias_vector.c  cassie_fixed_bias_vector.h  cassie_fixed_left_ankle.c  cassie_fixed_left_ankle.h  cassie_fixed_left_foot_back.c  cassie_fixed_left_foot_back.h  cassie_fixed_left_foot_front.c  cassie_fixed_left_foot_front.h  cassie_fixed_mass_matrix.c  cassie_fixed_mass_matrix.h  cassie_fixed_right_ankle.c  cassie_fixed_right_ankle.h  cassie_fixed_right_foot_back.c  cassie_fixed_right_foot_back.h  cassie_fixed_right_foot_front.c  cassie_fixed_right_foot_front.h
examples/cassie/model/cg/leg/: cassie_achilles_rod_constraint.c  cassie_achilles_rod_constraint.h  cassie_actuation.c  cassie_actuation_map.c  cassie_actuation_map.h  cassie_ankle.c  cassie_bias_vector.c  cassie_bias_vector.h  cassie_foot_back.c  cassie_foot_back.h  cassie_foot_front.c  cassie_foot_front.h  cassie_heel_spring_constraint.c  cassie_heel_spring_constraint.h  cassie_heel_spring_constraint_inertia.c  cassie_heel_spring_constraint_inertia.h  cassie_leg_achilles_rod_constraint.c  cassie_leg_achilles_rod_constraint.h  cassie_leg_actuation_map.c  cassie_leg_actuation_map.h  cassie_leg_ankle.c  cassie_leg_ankle.h  cassie_leg_bias_vector.c  cassie_leg_bias_vector.h  cassie_leg_foot_back.c  cassie_leg_foot_back.h  (+9 more)
examples/cassie/model/urdf/: cassie.urdf  cassie_fixed.urdf  cassie_leg.urdf
examples/cassie/sim/: simulate.cc  simulate.h  simulate_fixed.cc  simulate_fixed.h  simulate_leg.cc
examples/cassie/sim/agility_cassie/: cassie.xml  cassie_stand.xml
examples/cassie/test/: heel_spring_test.cc  ik.cc
examples/codegen/: CMakeLists.txt  code_generator.cc  code_generator.h
examples/simulator/: CMakeLists.txt  mujoco_sim.cc  mujoco_sim.h
(+1 files in other folders)
